[FIX,DOC] Corrected font sizes; higher visibility of function signatures
git-svn-id: http://svn.seqan.de/seqan/trunk@14726 e6417c60-b987-48fd-844e-b20f0fcc1017

--- a/util/py_lib/seqan/dox/tpl/css/common.less
+++ b/util/py_lib/seqan/dox/tpl/css/common.less
@@ -94,6 +94,11 @@ h3 {
     }
 }
 
+h4 {
+    font-size: 1em;
+    margin-bottom: .3em;
+}
+
 a:not([href]) {
 	color: inherit;
 	text-decoration: none;
@@ -525,12 +530,6 @@ html:not(.list) {
 
 :not(h2) + .method_details {
     margin-top: 3em;
-}
-
-.method_details + * {
-    margin-top: 1em;
-    margin-bottom: 1em;
-    font-size: 1.1em;
 }
 					
 .signature {
@@ -1024,6 +1023,8 @@ form .multiselect-container {
     	  	}
     	}
 	}
+	
+	[data-lang-entity-container] h2& > :first-child { display: none }
 }
 
 .data-lang-entity-example > :first-child { background: @rblue; border-color: darken(@rblue, 20%); }
@@ -1051,16 +1052,6 @@ html.page_languageentities {
 .langEntityRules(@langEntity, @color) {
 	@border-darken: 5%;
 	
-	// Language Entities page
-	html.page_languageentities [data-lang-entity-container=@{langEntity}] {
-		dt {
-		    padding: 0;
-		    background-color: transparent;
-		    background-image: none;
-		    font-size: 1.0em;
-        }
-	}
-	
 	[data-lang-entity=@{langEntity}] {   
         > :first-child {
            	background-color: transparent;
@@ -1074,7 +1065,47 @@ html.page_languageentities {
         }
 	}
 	
-	// headings and definitions on the language entity types page are an exception
+	h3[data-lang-entity=@{langEntity}] {
+	    display: table;
+	    font-size: 1.1em;
+	    padding-bottom: .3em;
+        width: 100%;
+        font-weight: 700;
+	    
+	    > * { display: table-cell !important; }
+	    
+    	> :first-child {
+    	    font-size: 1rem;
+    	    font-weight: 700 !important;
+        	width: 3.6rem;
+        	vertical-align: middle;
+        	text-align: center;
+        	background-color: @color;
+        	border-color: darken(@color, 10%);
+        	color: #fff;
+        	
+        	&:hover {
+            	background-color: darken(@color, 10%);
+        	}
+        }
+        
+        > :nth-child(2) {
+            padding-left: 1.9rem;
+        }
+	}
+	
+		
+	// Language Entities page
+	html.page_languageentities [data-lang-entity-container=@{langEntity}] {
+		dt {
+		    padding: 0;
+		    background-color: transparent;
+		    background-image: none;
+		    font-size: 1.0em;
+        }
+	}
+	
+	// headings and definitions on the language entity types page are colored and annotated
    	html.page_languageentities h2,
    	html.page_languageentities dt {
         &[data-lang-entity=@{langEntity}] {
